--- a/examples/DotNetFramework/WebFormApp/WebFormApp/packages.config
+++ b/examples/DotNetFramework/WebFormApp/WebFormApp/packages.config
@@ -1,24 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Azure.Core" version="1.20.0" targetFramework="net472" />
+  <package id="Azure.Core" version="1.31.0" targetFramework="net472" />
   <package id="Azure.Data.AppConfiguration" version="1.2.0" targetFramework="net472" />
-  <package id="Azure.Security.KeyVault.Secrets" version="4.2.0" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration" version="5.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="5.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.AzureAppConfiguration" version="4.5.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="5.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="5.0.2" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="5.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging" version="5.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="5.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Options" version="5.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Primitives" version="5.0.1" targetFramework="net472" />
-  <package id="Microsoft.FeatureManagement" version="2.4.0" targetFramework="net472" />
-  <package id="Microsoft.Identity.Client" version="4.37.0" targetFramework="net472" />
-  <package id="Microsoft.Identity.Client.Extensions.Msal" version="2.19.2" targetFramework="net472" />
-  <package id="Microsoft.NETCore.Platforms" version="5.0.4" targetFramework="net472" />
+  <package id="Azure.Messaging.EventGrid" version="4.15.0" targetFramework="net472" />
+  <package id="Azure.Security.KeyVault.Secrets" version="4.5.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net472" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration" version="7.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="7.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.AzureAppConfiguration" version="6.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="7.0.4" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="7.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="7.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="7.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="7.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="7.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="7.0.0" targetFramework="net472" />
+  <package id="Microsoft.FeatureManagement" version="2.5.1" targetFramework="net472" />
+  <package id="Microsoft.Identity.Client" version="4.53.0" targetFramework="net472" />
+  <package id="Microsoft.Identity.Client.Extensions.Msal" version="2.29.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="6.30.0" targetFramework="net472" />
+  <package id="Microsoft.NETCore.Platforms" version="7.0.2" targetFramework="net472" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
@@ -27,7 +29,7 @@
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net472" />
   <package id="System.Console" version="4.3.1" targetFramework="net472" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="5.0.1" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="7.0.2" targetFramework="net472" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net472" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net472" />
@@ -39,8 +41,8 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Linq" version="4.3.0" targetFramework="net472" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
-  <package id="System.Memory.Data" version="1.0.2" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
+  <package id="System.Memory.Data" version="7.0.0" targetFramework="net472" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
   <package id="System.Net.Primitives" version="4.3.1" targetFramework="net472" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net472" />
@@ -51,7 +53,7 @@
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
   <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net472" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net472" />
@@ -60,12 +62,12 @@
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net472" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
-  <package id="System.Security.Cryptography.ProtectedData" version="5.0.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.ProtectedData" version="7.0.1" targetFramework="net472" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net472" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net472" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net472" />
-  <package id="System.Text.Encodings.Web" version="5.0.1" targetFramework="net472" />
-  <package id="System.Text.Json" version="5.0.2" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="7.0.0" targetFramework="net472" />
+  <package id="System.Text.Json" version="7.0.2" targetFramework="net472" />
   <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net472" />
